tests/invalid/non_const.fl
main :: proc () {
  a := 2;
  b :: a;
}
